<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_deposit"
        android:icon="@drawable/ic_shopping_basket_black_24dp"
        android:title="@string/deposit"
        />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_favorite" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_bubble_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/title_account" />


</menu>
